added google font api font-family: work sans

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
-    
+    <!-- Header Section -->
+    <header class="work-sans-regularFont">
+        <nav class="navbar">
+            <h3 class="brandTitle">G3 Architects</h3>
+        </nav>
+    </header>
+
+    <!-- Main Section -->
+    <main></main>
+
+    <!-- Footer Section -->
+    <footer></footer>
 </body>
 </html>
