--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <header class="work-sans-regularFont">
         <nav class="navbar">
             <h3 class="brandTitle">G3 Architects</h3>
+            <ul class="navLinks">
+                <!-- li.navItem*4>a.navlink -->
+                <li class="navItem"><a href="#" class="navlink">Home</a></li>
+                <li class="navItem"><a href="#" class="navlink">About</a></li>
+                <li class="navItem"><a href="#" class="navlink">Contact Us</a></li>
+                <li class="navItem"><a href="#" class="navlink">Login</a></li>
+            </ul>
         </nav>
     </header>
 
