customize some navbar

--- a/index.html
+++ b/index.html
@@ -7,19 +7,30 @@
     <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/8203/8203469.png" type="image/x-icon">
     <link rel="stylesheet" href="./style/style.css">
 </head>
-<body>
+<body class="work-sans-regularFont">
     <!-- Header Section -->
-    <header class="work-sans-regularFont">
-        <nav class="navbar">
-            <h3 class="brandTitle">G3 Architects</h3>
-            <ul class="navLinks">
+    <header class="bg-light">
+        <nav class="navbar display-flex">
+            <h3 class="brand-title">G3 Architects</h3>
+            <ul class="nav-links display-flex">
                 <!-- li.navItem*4>a.navlink -->
-                <li class="navItem"><a href="#" class="navlink">Home</a></li>
-                <li class="navItem"><a href="#" class="navlink">About</a></li>
-                <li class="navItem"><a href="#" class="navlink">Contact Us</a></li>
-                <li class="navItem"><a href="#" class="navlink">Login</a></li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link text-dark2">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link text-dark2">About</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link text-dark2">Contact Us</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link text-dark2">Login</a>
+                </li>
             </ul>
         </nav>
+        <div class="banner">
+            
+        </div>
     </header>
 
     <!-- Main Section -->
