done team section

--- a/index.html
+++ b/index.html
@@ -7,36 +7,62 @@
     <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/8203/8203469.png" type="image/x-icon">
     <link rel="stylesheet" href="./style/style.css">
 </head>
+
 <body class="work-sans-regularFont">
-    <!-- Header Section -->
-    <header class="bg-light">
-        <nav class="navbar display-flex">
-            <h3 class="brand-title">G3 Architects</h3>
-            <ul class="nav-links display-flex">
-                <!-- li.navItem*4>a.navlink -->
-                <li class="nav-item">
-                    <a href="#" class="nav-link text-dark2">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link text-dark2">About</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link text-dark2">Contact Us</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link text-dark2">Login</a>
-                </li>
-            </ul>
-        </nav>
-        <div class="banner">
-            
+<!-- Header Section -->
+<header class="bg-light">
+    <nav class="navbar display-flex">
+        <h3 class="brand-title">G3 Architects</h3>
+        <ul class="nav-links display-flex">
+            <!-- li.navItem*4>a.navlink -->
+            <li class="nav-item">
+                <a href="#" class="nav-link text-dark2">Home</a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link text-dark2">About</a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link text-dark2">Contact Us</a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link text-dark2">Login</a>
+            </li>
+        </ul>
+    </nav>
+
+    <!--Banner-->
+    <div class="banner">
+        <div class="banner-content">
+            <h1 class="banner-title">Brand New Group of Architects</h1>
+            <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the
+                majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                look even</p>
+            <button class="btn-primary">Explore More</button>
         </div>
-    </header>
+        <img class="banner-image" src="./assets/banner.png" alt="banner pic">
+    </div>
+</header>
 
-    <!-- Main Section -->
-    <main></main>
+<!-- Main Section -->
+<main class="main">
+    <section class="teams display-flex">
+        <div class="team-img-container">
+            <img src="./assets/team1.png" alt="suger daddy trying to flirt with fresher">
+            <img src="./assets/team2.png" alt="two lady employee looking at their boss horny way">
+            <img src="./assets/team3.png" alt="male person trying to help & impress fresher lady employee">
+            <img src="./assets/team4.png" alt="playboy employee trying to flirt with pregnant employee women">
+        </div>
+        <div class="our-features">
+            <h3 class="feature-title">
+                <span class="text-dark3">Quick list</span> <span class="text-dark1">of Our</span> <span class="text-primary">Features</span>
+            </h3>
+            <p class="team-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <button class="btn-primary">Explore More</button>
+        </div>
+    </section>
+</main>
 
-    <!-- Footer Section -->
-    <footer></footer>
+<!-- Footer Section -->
+<footer></footer>
 </body>
 </html>
