responsive team small and medium device

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <h3 class="feature-title">
                 <span class="text-dark3">Quick list</span> <span class="text-dark1">of Our</span> <span class="text-primary">Features</span>
             </h3>
-            <p class="team-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <p class="team-description text-dark3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
             <button class="btn-primary">Explore More</button>
         </div>
     </section>
