--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,60 +10,102 @@
 </head>
 
 <body class="work-sans-regularFont">
-<!-- Header Section -->
-<header class="bg-light">
-    <nav class="navbar display-flex">
-        <h3 class="brand-title">G3 Architects</h3>
-        <ul class="nav-links display-flex">
-            <!-- li.navItem*4>a.navlink -->
-            <li class="nav-item">
-                <a href="#" class="nav-link text-dark2">Home</a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link text-dark2">About</a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link text-dark2">Contact Us</a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link text-dark2">Login</a>
-            </li>
-        </ul>
-    </nav>
+    <!-- Header Section -->
+    <header class="bg-light">
+        <nav class="navbar display-flex">
+            <h3 class="brand-title">G3 Architects</h3>
+            <ul class="nav-links display-flex">
+                <!-- li.navItem*4>a.navlink -->
+                <li class="nav-item">
+                    <a href="#" class="nav-link text-dark2">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link text-dark2">About</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link text-dark2">Contact Us</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link text-dark2">Login</a>
+                </li>
+            </ul>
+        </nav>
 
-    <!--Banner-->
-    <div class="banner">
-        <div class="banner-content">
-            <h1 class="banner-title">Brand New Group of Architects</h1>
-            <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the
-                majority have suffered alteration in some form, by injected humour, or randomised words which don't
-                look even</p>
-            <button class="btn-primary">Explore More</button>
+        <!--Banner-->
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title">Brand New Group of Architects</h1>
+                <p class="banner-description text-dark3">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+            <img class="banner-image" src="./assets/banner.png" alt="banner pic">
         </div>
-        <img class="banner-image" src="./assets/banner.png" alt="banner pic">
-    </div>
-</header>
+    </header>
 
-<!-- Main Section -->
-<main class="main">
-    <section class="teams display-flex">
-        <div class="team-img-container">
-            <img src="./assets/team1.png" alt="suger daddy trying to flirt with fresher">
-            <img src="./assets/team2.png" alt="two lady employee looking at their boss horny way">
-            <img src="./assets/team3.png" alt="male person trying to help & impress fresher lady employee">
-            <img src="./assets/team4.png" alt="playboy employee trying to flirt with pregnant employee women">
-        </div>
-        <div class="our-features">
-            <h3 class="feature-title">
-                <span class="text-dark3">Quick list</span> <span class="text-dark1">of Our</span> <span class="text-primary">Features</span>
-            </h3>
-            <p class="team-description text-dark3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-            <button class="btn-primary">Explore More</button>
-        </div>
-    </section>
-</main>
+    <!-- Main Section -->
+    <main class="main">
+        <!-- Team Section -->
+        <section class="teams display-flex">
+            <div class="team-img-container">
+                <img src="./assets/team1.png" alt="suger daddy trying to flirt with fresher">
+                <img src="./assets/team2.png" alt="two lady employee looking at their boss horny way">
+                <img src="./assets/team3.png" alt="male person trying to help & impress fresher lady employee">
+                <img src="./assets/team4.png" alt="playboy employee trying to flirt with pregnant employee women">
+            </div>
+            <div class="our-features">
+                <h3 class="feature-title section-title">
+                    <span class="text-dark3">Quick list</span> <span class="text-dark1">of Our</span> <span
+                        class="text-primary">Features</span>
+                </h3>
+                <p class="team-description text-dark3">There are many variations of passages of Lorem Ipsum available,
+                    but the majority have suffered alteration in some form, by injected humour, or randomised words
+                    which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
 
-<!-- Footer Section -->
-<footer></footer>
+        <!-- Enjoy Feature -->
+        <section>
+            <h3 class="section-title">Features you will love & enjoy</h3>
+            <p class="text-dark3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+        </section>
+
+        <!-- Some Facts -->
+        <section>
+            <h3 class="section-title">Some Facts</h3>
+            <p class="text-dark3">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
+            </p>
+            <div class="facts-container">
+                <!-- div.fact*4>img.fact-icon+h4.fact-number+h5.fact-name -->
+                <div class="fact">
+                    <img src="" alt="" class="fact-icon">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+                <div class="fact">
+                    <img src="" alt="" class="fact-icon">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+                <div class="fact">
+                    <img src="" alt="" class="fact-icon">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+                <div class="fact">
+                    <img src="" alt="" class="fact-icon">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <!-- Footer Section -->
+    <footer></footer>
 </body>
+
 </html>
