--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         <div class="banner">
             <div class="banner-content">
                 <h1 class="banner-title">Brand New Group of Architects</h1>
-                <p class="banner-description text-dark3">There are many variations of passages of Lorem Ipsum available, but the
+                <p class="banner-description text-dark3">There are many variations of passages of Lorem Ipsum available,
+                    but the
                     majority have suffered alteration in some form, by injected humour, or randomised words which don't
                     look even</p>
                 <button class="btn-primary">Explore More</button>
@@ -69,37 +70,68 @@
         <!-- Enjoy Feature -->
         <section>
             <h3 class="section-title">Features you will love & enjoy</h3>
-            <p class="text-dark3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <p class="text-dark3 fact-description">There are many variations of passages of Lorem Ipsum available, but
+                the majority have
+                suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
         </section>
 
         <!-- Some Facts -->
         <section>
             <h3 class="section-title">Some Facts</h3>
-            <p class="text-dark3">
-                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
+            <p class="text-dark3 fact-description" id="e1">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                alteration.
             </p>
             <div class="facts-container">
                 <!-- div.fact*4>img.fact-icon+h4.fact-number+h5.fact-name -->
-                <div class="fact">
-                    <img src="" alt="" class="fact-icon">
-                    <h4 class="fact-number"></h4>
-                    <h5 class="fact-name"></h5>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="./assets/icons/ribon.png" alt="ribon banner" class="fact-icon">
+                        <h4 class="fact-number">54</h4>
+                        <h5 class="fact-name">Awards Winnings</h5>
+                    </div>
+
                 </div>
-                <div class="fact">
-                    <img src="" alt="" class="fact-icon">
-                    <h4 class="fact-number"></h4>
-                    <h5 class="fact-name"></h5>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="./assets/icons/projects.png" alt="project icon" class="fact-icon">
+                        <h4 class="fact-number">1458</h4>
+                        <h5 class="fact-name">Project Finished</h5>
+                    </div>
+
                 </div>
-                <div class="fact">
-                    <img src="" alt="" class="fact-icon">
-                    <h4 class="fact-number"></h4>
-                    <h5 class="fact-name"></h5>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="./assets/icons/customers.png" alt="under construction work icon" class="fact-icon">
+                        <h4 class="fact-number">590</h4>
+                        <h5 class="fact-name">Clients Worked</h5>
+                    </div>
+
                 </div>
-                <div class="fact">
-                    <img src="" alt="" class="fact-icon">
-                    <h4 class="fact-number"></h4>
-                    <h5 class="fact-name"></h5>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="./assets/icons/email.png" alt="email icon" class="fact-icon">
+                        <h4 class="fact-number">22578</h4>
+                        <h5 class="fact-name">Email Send</h5>
+                    </div>
+
                 </div>
+            </div>
+        </section>
+
+        <!-- Our Sponser -->
+        <section class="our-sponsors">
+            <div class="sponsor-info">
+                <h3 class="section-title">Our Sponspors</h3>
+                <p class="text-dark3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+
+            <div class="sponser-companies">
+                <img src="./assets/sponsors/spotify.png" alt="spotify png">
+                <img src="./assets/sponsors/amazon.png" alt="amazon png">
+                <img src="./assets/sponsors/google.png" alt="google png">
+                <img src="./assets/sponsors/telerama.png" alt="telerama png">
+                <img src="./assets/sponsors/figma.png" alt="figma png">
             </div>
         </section>
     </main>
