almost done need some responsive one part

--- a/index.html
+++ b/index.html
@@ -68,11 +68,41 @@
         </section>
 
         <!-- Enjoy Feature -->
-        <section>
-            <h3 class="section-title">Features you will love & enjoy</h3>
-            <p class="text-dark3 fact-description">There are many variations of passages of Lorem Ipsum available, but
-                the majority have
-                suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+        <section class="feature display-flex">
+            <!-- div1 -->
+            <div>
+                <h3 class="section-title" id="special-border">Features you will <br />love & enjoy</h3>
+                <p class="text-dark3 fact-description">There are many variations of passages of Lorem Ipsum available,
+                    but
+                    the majority have
+                    suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+
+                    <!-- Shadow Card -->
+                     <div class="shadow-card">
+                        <h4>Dexktop & Mobile Version</h4>
+                        <p class="text-dark3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                     </div>
+                     <div class="shadow-card">
+                        <h4>Drag & Drop Builder</h4>
+                        <p class="text-dark3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                     </div>
+                     <div class="shadow-card">
+                        <h4>Awesome Modern Design</h4>
+                        <p class="text-dark3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                     </div>
+                     <div class="shadow-card">
+                        <h4>Super Easy to Edit</h4>
+                        <p class="text-dark3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                     </div>
+            </div>
+            <!-- div2 -->
+            <div>
+                <img src="./assets/architect.png" alt="">
+                <button class="btn-primary" id="btn-badge">
+                    <span>10+Year</span> <br>
+                    <span>Experience</span>
+                </button>
+            </div>
         </section>
 
         <!-- Some Facts -->
@@ -123,7 +153,8 @@
         <section class="our-sponsors">
             <div class="sponsor-info">
                 <h3 class="section-title">Our Sponspors</h3>
-                <p class="text-dark3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                <p class="text-dark3">There are many variations of passages of Lorem Ipsum available, but the majority
+                    have suffered alteration.</p>
             </div>
 
             <div class="sponser-companies">
