finally done maybe y'll find responsive issue but i'll fix them in future

--- a/index.html
+++ b/index.html
@@ -70,37 +70,40 @@
         <!-- Enjoy Feature -->
         <section class="feature display-flex">
             <!-- div1 -->
-            <div>
+            <div id="center-please">
                 <h3 class="section-title" id="special-border">Features you will <br />love & enjoy</h3>
                 <p class="text-dark3 fact-description">There are many variations of passages of Lorem Ipsum available,
                     but
                     the majority have
                     suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-
-                    <!-- Shadow Card -->
-                     <div class="shadow-card">
-                        <h4>Dexktop & Mobile Version</h4>
-                        <p class="text-dark3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-                     </div>
-                     <div class="shadow-card">
-                        <h4>Drag & Drop Builder</h4>
-                        <p class="text-dark3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-                     </div>
-                     <div class="shadow-card">
-                        <h4>Awesome Modern Design</h4>
-                        <p class="text-dark3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-                     </div>
-                     <div class="shadow-card">
-                        <h4>Super Easy to Edit</h4>
-                        <p class="text-dark3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-                     </div>
+                <!-- Shadow Card -->
+                <div class="shadow-card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="text-dark3">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="shadow-card">
+                    <h4>Drag & Drop Builder</h4>
+                    <p class="text-dark3">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="shadow-card">
+                    <h4>Awesome Modern Design</h4>
+                    <p class="text-dark3">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="shadow-card">
+                    <h4>Super Easy to Edit</h4>
+                    <p class="text-dark3">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
             </div>
             <!-- div2 -->
-            <div>
-                <img src="./assets/architect.png" alt="">
+            <div class="feature-architect">
+                <img src="./assets/architect.png" alt="girl standing">
                 <button class="btn-primary" id="btn-badge">
-                    <span>10+Year</span> <br>
-                    <span>Experience</span>
+                    <span id="btn-year">10+Year</span> <br>
+                    <span id="btn-small">Experience</span>
                 </button>
             </div>
         </section>
@@ -168,7 +171,11 @@
     </main>
 
     <!-- Footer Section -->
-    <footer></footer>
+    <footer>
+        <div class="ft-clr text-dark2">
+            <p>All rights reserved copyright@2023 startup landing page design</p>
+        </div>
+    </footer>
 </body>
 
 </html>
